Fix broken CSS

--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ header #title-display {
     
 }
 
-.title h4
+.title h4 {
+    
+}
 
 main {
     width: 90%;
